# python-testing-workshop

./: README.md  diagrams.graphml  pyproject.toml  requirements.txt  setup.cfg
app/alembic/: env.py
app/alembic/versions/: 3ad38b890c74_petz.py  9f3ee5fde992_init_skeleton.py  a42c8bf08e45_updated_address.py
app/model/: business_logic.py  crud.py  db.py  mapping.py  view.py
app/service/: google_maps.py  metno.py  sorters.py
tests/: conftest.py  requirements.txt
tests/app/model/: test_business_logic.py  test_crud.py  test_mapping.py
tests/app/service/: test_metno.py  test_sorters.py
tests/example_data/: metno_midday.json
tests/example_sql/: base_config.sql
